@@ -1,13 +1,18 @@
-/*
- * Copyright (c) 2009, 2012 IBM Corp.
+/*******************************************************************************
+ * Copyright (c) 2009, 2014 IBM Corp.
  *
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * and Eclipse Distribution License v1.0 which accompany this distribution. 
+ *
+ * The Eclipse Public License is available at 
+ *    http://www.eclipse.org/legal/epl-v10.html
+ * and the Eclipse Distribution License is available at 
+ *   http://www.eclipse.org/org/documents/edl-v10.php.
  *
  * Contributors:
  *    Dave Locke - initial API and implementation and/or initial documentation
+ *    Ian Craggs - MQTT 3.1.1 support
  */
 package org.eclipse.paho.client.mqttv3;
 
@@ -70,19 +75,19 @@ import org.eclipse.paho.client.mqttv3.util.Debug;
  * @see IMqttAsyncClient
  */
 public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvider {
+	private static final String CLASS_NAME = MqttAsyncClient.class.getName();
+	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
 
 	private static final String CLIENT_ID_PREFIX = "paho-";
 	private static final long QUIESCE_TIMEOUT = 30000; // ms
 	private static final long DISCONNECT_TIMEOUT = 10000; // ms
+	private static final char MIN_HIGH_SURROGATE = '\uD800';
+	private static final char MAX_HIGH_SURROGATE = '\uDBFF';
 	private String clientId;
 	private String serverURI;
 	protected ClientComms comms;
 	private Hashtable topics;
 	private MqttClientPersistence persistence;
-	private MqttProtocolVersion protocolVersion = MqttProtocolVersion.V3_1;
-
-	final static String className = MqttAsyncClient.class.getName();
-	public Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,className);
 
 	/**
 	 * Create an MqttAsyncClient that is used to communicate with an MQTT server.
@@ -276,7 +281,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 		}
 
 		// @TRACE 101=<init> ClientID={0} ServerURI={1} PersistenceType={2}
-		log.fine(className,methodName,"101",new Object[]{clientId,serverURI,persistence});
+		log.fine(CLASS_NAME,methodName,"101",new Object[]{clientId,serverURI,persistence});
 
 		this.persistence.open(clientId, serverURI);
 		this.comms = new ClientComms(this, this.persistence, pingSender);
@@ -292,8 +297,6 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 	 * @return returns 'true' if the character is a high-surrogate code unit
 	 */
 	protected static boolean Character_isHighSurrogate(char ch) {
-		char MIN_HIGH_SURROGATE = '\uD800';
-		char MAX_HIGH_SURROGATE = '\uDBFF';
 		return(ch >= MIN_HIGH_SURROGATE) && (ch <= MAX_HIGH_SURROGATE);
 	}
 
@@ -310,7 +313,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 	protected NetworkModule[] createNetworkModules(String address, MqttConnectOptions options) throws MqttException, MqttSecurityException {
 		final String methodName = "createNetworkModules";
 		// @TRACE 116=URI={0}
-		log.fine(className, methodName, "116", new Object[]{address});
+		log.fine(CLASS_NAME, methodName, "116", new Object[]{address});
 
 		NetworkModule[] networkModules = null;
 		String[] serverURIs = options.getServerURIs();
@@ -328,7 +331,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 			networkModules[i] = createNetworkModule(array[i], options);
 		}
 
-		log.fine(className, methodName, "108");
+		log.fine(CLASS_NAME, methodName, "108");
 		return networkModules;
 	}
 
@@ -343,7 +346,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 	private NetworkModule createNetworkModule(String address, MqttConnectOptions options) throws MqttException, MqttSecurityException {
 		final String methodName = "createNetworkModule";
 		// @TRACE 115=URI={0}
-		log.fine(className,methodName, "115", new Object[] {address});
+		log.fine(CLASS_NAME,methodName, "115", new Object[] {address});
 
 		NetworkModule netModule;
 		String shortAddress;
@@ -472,11 +475,11 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 		}
 
 		// @TRACE 103=cleanSession={0} connectionTimeout={1} TimekeepAlive={2} userName={3} password={4} will={5} userContext={6} callback={7}
-		log.fine(className,methodName, "103",
+		log.fine(CLASS_NAME,methodName, "103",
 				new Object[]{
-				new Boolean(options.isCleanSession()),
-				new Integer(options.getConnectionTimeout()),
-				new Integer(options.getKeepAliveInterval()),
+				Boolean.valueOf(options.isCleanSession()),
+				Integer.valueOf(options.getConnectionTimeout()),
+				Integer.valueOf(options.getKeepAliveInterval()),
 				options.getUserName(),
 				((null == options.getPassword())?"[null]":"[notnull]"),
 				((null == options.getWillMessage())?"[null]":"[notnull]"),
@@ -523,7 +526,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 	public IMqttToken disconnect(long quiesceTimeout, Object userContext, IMqttActionListener callback) throws MqttException {
 		final String methodName = "disconnect";
 		// @TRACE 104=> quiesceTimeout={0} userContext={1} callback={2}
-		log.fine(className,methodName, "104",new Object[]{ new Long(quiesceTimeout), userContext, callback});
+		log.fine(CLASS_NAME,methodName, "104",new Object[]{ new Long(quiesceTimeout), userContext, callback});
 
 		MqttToken token = new MqttToken(getClientId());
 		token.setActionCallback(callback);
@@ -534,11 +537,11 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 			comms.disconnect(disconnect, quiesceTimeout, token);
 		} catch (MqttException ex) {
 			//@TRACE 105=< exception
-			log.fine(className,methodName,"105",null,ex);
+			log.fine(CLASS_NAME,methodName,"105",null,ex);
 			throw ex;
 		}
 		//@TRACE 108=<
-		log.fine(className,methodName,"108");
+		log.fine(CLASS_NAME,methodName,"108");
 
 		return token;
 	}
@@ -654,11 +657,11 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 		final String methodName = "ping";
 		MqttToken token;
 		//@TRACE 117=>
-		log.fine(className,methodName,"117");
+		log.fine(CLASS_NAME,methodName,"117");
 		
 		token = comms.checkForActivity();
 		//@TRACE 118=<
-		log.fine(className,methodName,"118");
+		log.fine(CLASS_NAME,methodName,"118");
 		
 		return token;
 	}
@@ -707,7 +710,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 		}
 		
 		//@TRACE 106=Subscribe topic={0} userContext={1} callback={2}
-		log.fine(className,methodName,"106",new Object[]{subs, userContext, callback});
+		log.fine(CLASS_NAME,methodName,"106",new Object[]{subs, userContext, callback});
 
 		MqttToken token = new MqttToken(getClientId());
 		token.setActionCallback(callback);
@@ -718,7 +721,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 
 		comms.sendNoWait(register, token);
 		//@TRACE 109=<
-		log.fine(className,methodName,"109");
+		log.fine(CLASS_NAME,methodName,"109");
 
 		return token;
 	}
@@ -764,7 +767,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 		}
 		
 		//@TRACE 107=Unsubscribe topic={0} userContext={1} callback={2}
-		log.fine(className, methodName,"107",new Object[]{subs, userContext, callback});
+		log.fine(CLASS_NAME, methodName,"107",new Object[]{subs, userContext, callback});
 
 		MqttToken token = new MqttToken(getClientId());
 		token.setActionCallback(callback);
@@ -775,7 +778,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 
 		comms.sendNoWait(unregister, token);
 		//@TRACE 110=<
-		log.fine(className,methodName,"110");
+		log.fine(CLASS_NAME,methodName,"110");
 
 		return token;
 	}
@@ -841,7 +844,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 			MqttPersistenceException {
 		final String methodName = "publish";
 		//@TRACE 111=< topic={0} message={1}userContext={1} callback={2}
-		log.fine(className,methodName,"111", new Object[] {topic, userContext, callback});
+		log.fine(CLASS_NAME,methodName,"111", new Object[] {topic, userContext, callback});
 
 		//Checks if a topic is valid when publishing a message.
 		MqttTopic.validate(topic, false/*wildcards NOT allowed*/);
@@ -856,7 +859,7 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 		comms.sendNoWait(pubMsg, token);
 
 		//@TRACE 112=<
-		log.fine(className,methodName,"112");
+		log.fine(CLASS_NAME,methodName,"112");
 
 		return token;
 	}
@@ -867,10 +870,10 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 	public void close() throws MqttException {
 		final String methodName = "close";
 		//@TRACE 113=<
-		log.fine(className,methodName,"113");
+		log.fine(CLASS_NAME,methodName,"113");
 		comms.close();
 		//@TRACE 114=>
-		log.fine(className,methodName,"114");
+		log.fine(CLASS_NAME,methodName,"114");
 
 	}
 
@@ -881,16 +884,4 @@ public class MqttAsyncClient implements IMqttAsyncClient { // DestinationProvide
 		return new Debug(clientId,comms);
 	}
 
-	/**
-	 * Return Current Mqtt protocol version. Client supports version 3.1 and 3.1.1. 
-	 * This value is V3_1 by default.
-	 * @return return a "type safe enum" class to state current version.
-	 */
-	public MqttProtocolVersion getProtocolVersion() {
-		return protocolVersion;
-	}
-
-	public void setProtocolVersion(MqttProtocolVersion version) {
-		this.protocolVersion = version;
-	}
 }
